--- a/server/package.json
+++ b/server/package.json
@@ -12,14 +12,17 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.17.1",
-    "@prisma/client": "^5.6.0",
+    "@prisma/client": "^6.16.2",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "serverless-http": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
-    "prisma": "^5.6.0"
+    "prisma": "^6.16.2"
   }
 }
