--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mqtt": "^5.14.1",
     "serverless-http": "^4.0.0"
   },
   "devDependencies": {
