--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "quailcare-ai-server",
+  "name": "qualicare-ai-server",
   "version": "1.0.0",
   "description": "QuailCare AI Backend Server",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "migrate": "npx prisma migrate dev",
-    "generate": "npx prisma generate",
-    "postinstall": "prisma generate",
-    "setup-knowledge": "node scripts/setupQuailKnowledge.js",
-    "test-elasticsearch": "node -e \"require('./services/elasticsearchService').testSearch().then(() => process.exit(0))\""
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "typecheck": "tsc --noEmit",
+    "migrate": "prisma migrate dev",
+    "generate": "prisma generate",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@google/generative-ai": "^0.17.1",
@@ -25,7 +26,14 @@
     "serverless-http": "^4.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "prisma": "^6.16.2"
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.10.5",
+    "prisma": "^6.16.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
   }
 }
