--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "QualiCare AI - Monorepo for quail health monitoring system",
   "scripts": {
-    "dev": "pnpm --parallel --stream run dev",
+    "dev": "concurrently -n \"WEB,SERVER\" -c \"cyan,green\" \"pnpm --filter=client run dev --host\" \"pnpm --filter=server run dev\"",
     "dev:client": "pnpm --filter client dev",
     "dev:server": "pnpm --filter server dev",
     "build": "pnpm --filter client build && pnpm --filter server build",
@@ -19,5 +19,8 @@
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
   },
-  "packageManager": "pnpm@8.15.0"
+  "packageManager": "pnpm@8.15.0",
+  "devDependencies": {
+    "concurrently": "^9.2.1"
+  }
 }
