--- a/client/package.json
+++ b/client/package.json
@@ -13,14 +13,19 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "chart.js": "^4.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.563.0",
+    "radix-ui": "^1.4.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.1",
-    "tailwindcss": "^4.1.13",
     "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0"
+    "react-router-dom": "^6.26.1",
+    "remark-gfm": "^4.0.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -31,6 +36,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "shadcn": "^3.8.4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.2"
   }
